--- a/Settings.plist
+++ b/Settings.plist
@@ -5,8 +5,6 @@
 	<dict>
 		<key>Key</key>
 		<string>notifoUsername</string>
-		<key>Secure</key>
-		<false/>
 		<key>Title</key>
 		<string>Username</string>
 		<key>Type</key>
@@ -14,7 +12,7 @@
 	</dict>
 	<dict>
 		<key>Key</key>
-		<string>notifioAPIKey</string>
+		<string>notifoAPIKey</string>
 		<key>Title</key>
 		<string>API Key</string>
 		<key>Type</key>
